force-app/main/default/objects/Opportunity/fields/Body_Type__c.field-meta.xml
<CustomField>
    <fullName>Body_Type__c</fullName>
    <label>Body Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hatchback</fullName>
            </value>
            <value>
                <fullName>SUV</fullName>
            </value>
            <value>
                <fullName>Sedan</fullName>
            </value>
            <value>
                <fullName>Crossover</fullName>
            </value>
            <value>
                <fullName>MUV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>