force-app/main/default/objects/Opportunity/fields/Call_Center_Lead__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Call Center Lead</label>
    <type>Checkbox</type>
</CustomField>