force-app/main/default/objects/Opportunity/fields/Dealer_Code_for_opp__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Code_for_opp__c</fullName>
    <formula>Dealer__r.Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dealer Code for opp</label>
    <type>Text</type>
</CustomField>