force-app/main/default/objects/Opportunity/fields/Dealer_Role__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Role__c</fullName>
    <formula>TEXT(Dealer__r.Dealer_Role__c)</formula>
    <label>Dealer Role</label>
    <type>Text</type>
</CustomField>