force-app/main/default/objects/Opportunity/fields/Duplicate_Lead__c.field-meta.xml
<CustomField>
    <fullName>Duplicate_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Duplicate Lead</label>
    <type>Checkbox</type>
</CustomField>