force-app/main/default/objects/Opportunity/fields/Finance_Requirement_at_CC__c.field-meta.xml
<CustomField>
    <fullName>Finance_Requirement_at_CC__c</fullName>
    <label>Finance Requirement at CC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>