force-app/main/default/objects/Opportunity/fields/Interested_Make__c.field-meta.xml
<CustomField>
    <fullName>Interested_Make__c</fullName>
    <formula>Product__r.Make__c</formula>
    <label>BUC Make</label>
    <type>Text</type>
</CustomField>