force-app/main/default/objects/Opportunity/fields/Interested_Model__c.field-meta.xml
<CustomField>
    <fullName>Interested_Model__c</fullName>
    <formula>Product__r.Model__c</formula>
    <label>BUC Model</label>
    <type>Text</type>
</CustomField>