force-app/main/default/objects/Opportunity/fields/Interested_Variant__c.field-meta.xml
<CustomField>
    <fullName>Interested_Variant__c</fullName>
    <formula>Product__r.Variant__c</formula>
    <label>BUC Variant</label>
    <type>Text</type>
</CustomField>