force-app/main/default/objects/Opportunity/fields/Kilometers_Driven__c.field-meta.xml
<CustomField>
    <fullName>Kilometers_Driven__c</fullName>
    <label>Kilometers Driven</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0-5,000 km</fullName>
            </value>
            <value>
                <fullName>5,000-10,000 km</fullName>
            </value>
            <value>
                <fullName>10,000-20,000 km</fullName>
            </value>
            <value>
                <fullName>20,000-30,000 km</fullName>
            </value>
            <value>
                <fullName>30,000-50,000 km</fullName>
            </value>
            <value>
                <fullName>&gt;50,000 km</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>