force-app/main/default/objects/Opportunity/fields/Last_Qualified_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Qualified_Date__c</fullName>
    <label>Last Qualified Date</label>
    <type>DateTime</type>
</CustomField>