force-app/main/default/objects/Opportunity/fields/LastQualifiedBy__c.field-meta.xml
<CustomField>
    <fullName>LastQualifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Qualified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Followup_Leads2</relationshipName>
    <type>Lookup</type>
</CustomField>