force-app/main/default/objects/Opportunity/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <label>Marketing Campaign</label>
    <length>155</length>
    <type>Text</type>
</CustomField>