force-app/main/default/objects/Opportunity/fields/Marketing_Device__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Device__c</fullName>
    <label>Marketing Device</label>
    <length>50</length>
    <type>Text</type>
</CustomField>