force-app/main/default/objects/Opportunity/fields/Marketing_Medium__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Medium__c</fullName>
    <label>Marketing Medium</label>
    <length>155</length>
    <type>Text</type>
</CustomField>