force-app/main/default/objects/Opportunity/fields/Marketing_Source__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Source__c</fullName>
    <label>Marketing Source</label>
    <length>155</length>
    <type>Text</type>
</CustomField>