force-app/main/default/objects/Opportunity/fields/Marketing_Term__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Term__c</fullName>
    <label>Marketing Term</label>
    <length>155</length>
    <type>Text</type>
</CustomField>