force-app/main/default/objects/Opportunity/fields/Opp_Whatsapp_Consent__c.field-meta.xml
<CustomField>
    <fullName>Opp_Whatsapp_Consent__c</fullName>
    <label>Opp Whatsapp Consent</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>