force-app/main/default/objects/Opportunity/fields/Photo_Received__c.field-meta.xml
<CustomField>
    <fullName>Photo_Received__c</fullName>
    <label>Photo Received</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>