force-app/main/default/objects/Opportunity/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reservation Status</label>
    <type>Checkbox</type>
</CustomField>