force-app/main/default/objects/Opportunity/fields/status__c.field-meta.xml
<CustomField>
    <fullName>status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hot</fullName>
                <color>#000000</color>
                <label>Hot</label>
            </value>
            <value>
                <fullName>Call Back</fullName>
            </value>
            <value>
                <fullName>Test Drive</fullName>
                <color>#FF6600</color>
                <label>Test Drive</label>
            </value>
            <value>
                <fullName>Test Drive Rescheduled</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
                <color>#FF0000</color>
                <label>Cancelled</label>
            </value>
            <value>
                <fullName>Warm</fullName>
                <color>#FF6600</color>
                <label>Warm</label>
            </value>
            <value>
                <fullName>Cold</fullName>
                <color>#006600</color>
                <label>Cold</label>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Visiting</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>Finalised</fullName>
                <color>#009900</color>
                <label>Finalised</label>
            </value>
            <value>
                <fullName>No response</fullName>
                <color>#CC66CC</color>
                <label>No response</label>
            </value>
            <value>
                <fullName>Walk-in</fullName>
            </value>
            <value>
                <fullName>Do Not Call</fullName>
            </value>
            <value>
                <fullName>Number Busy</fullName>
            </value>
            <value>
                <fullName>Invalid Number</fullName>
            </value>
            <value>
                <fullName>Interested in New Car</fullName>
            </value>
            <value>
                <fullName>Interested in CV</fullName>
            </value>
            <value>
                <fullName>Switched Off Not Reachable</fullName>
                <color>#FF6666</color>
                <label>Switched Off Not Reachable</label>
            </value>
            <value>
                <fullName>Pre-Sale Complaint</fullName>
            </value>
            <value>
                <fullName>Dispute at dealership</fullName>
            </value>
            <value>
                <fullName>Language Issue</fullName>
            </value>
            <value>
                <fullName>Sold</fullName>
                <color>#000099</color>
                <label>Sold</label>
            </value>
            <value>
                <fullName>Follow up</fullName>
            </value>
            <value>
                <fullName>Open</fullName>
                <color>#FF9966</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Rejected by valuator</fullName>
            </value>
            <value>
                <fullName>Rejected before evaluation</fullName>
            </value>
            <value>
                <fullName>Evaluated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>