force-app/main/default/objects/Opportunity/fields/Stock_Id__c.field-meta.xml
<CustomField>
    <fullName>Stock_Id__c</fullName>
    <formula>Product__r.Stock_ID__c</formula>
    <label>Stock Id</label>
    <type>Text</type>
</CustomField>