force-app/main/default/objects/Opportunity/fields/Stock_Type_From_Product__c.field-meta.xml
<CustomField>
    <fullName>Stock_Type_From_Product__c</fullName>
    <formula>TEXT(Product__r.Vehicle_Category__c)</formula>
    <label>Stock Type</label>
    <type>Text</type>
</CustomField>