force-app/main/default/objects/Opportunity/recordTypes/ELV.recordType-meta.xml
<RecordType>
    <fullName>ELV</fullName>
    <active>true</active>
    <businessProcess>Seller Car Sales Process</businessProcess>
    <label>ELV</label>
</RecordType>