force-app/main/default/objects/Opportunity/validationRules/LeadSource_Resticted_Opp_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>LeadSource_Resticted_Opp_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(LeadSource), (NOT($User.Username = &apos;integration.user@mfcw.com&apos;)))</errorConditionFormula>
    <errorMessage>Lead Source cannot be Changed</errorMessage>
</ValidationRule>