force-app/main/default/objects/Opportunity/validationRules/Lost_Reason_MandatoryBUCandHI.validationRule-meta.xml
<ValidationRule>
    <fullName>Lost_Reason_MandatoryBUCandHI</fullName>
    <active>true</active>
    <description>Lead Status is marked as Lost then Lost Reason is mandatory.</description>
    <errorConditionFormula>AND( 
     OR(
          $RecordType.Name = &quot;Buyer Used Car&quot;, 
          $RecordType.Name = &quot;Seller Car&quot; 
          
     ),
ISCHANGED(status__c ) &amp;&amp;
ISPICKVAL(status__c, &apos;Lost&apos;) &amp;&amp;
ISBLANK( TEXT(Lost_Reason__c ))
)</errorConditionFormula>
    <errorMessage>Lost Reason is mandatory if status is selected as Lost</errorMessage>
</ValidationRule>