force-app/main/default/objects/Opportunity/validationRules/ValidationOnStatus.validationRule-meta.xml
<ValidationRule>
    <fullName>ValidationOnStatus</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISCHANGED(status__c),
ISPICKVAL(PRIORVALUE(status__c), &quot;Sold&quot;),
NOT(ISPICKVAL(status__c, &quot;Sold&quot;))
)</errorConditionFormula>
    <errorMessage>You do not have access to change the status value when it is Sold</errorMessage>
</ValidationRule>